--- a/JiaoBaoYun-hb/html/show/show-detail.html
+++ b/JiaoBaoYun-hb/html/show/show-detail.html
@@ -7,6 +7,8 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
+		<link href="../../css/show/show-detail.css" rel="stylesheet" />
 	</head>
 
 	<body>
@@ -14,26 +16,46 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">详情</h1>
 		</header>
-		<div id="show-detail" class="mui-content">
-			<div v-if="showDetail.TabId">
-				<h4>{{showDetail.MsgTitle}}</h4>
-				<div class="">
-					<img v-bind:src="showDetail.PublisherImg"  style="width: 4rem; height: 4rem;"/>
-					<div>
-						<p>{{showDetail.PublisherName}}</p>
-						<p>{{showDetail.PublishDate}}</p>
+		<div id="show-detail"  class="mui-content">
+			<div >
+				<h4 class="detail-head single-line">{{showDetail.MsgTitle}}</h4>
+				<div class="publisher-container">
+					<img class="publisher-img" v-bind:src="showDetail.PublisherImg"/>
+					<div class="publisher-info">
+						<div class="publisher-name single-line">{{showDetail.PublisherName}}</div>
+						<div class="publisher-date">{{showDetail.PublishDate}}</div>
 					</div>
-					<input type="button" value="关注" />
+					<button class="attention-btn btn-unfocus">关注</button>
 				</div>
-				<div class="">{{showDetail.MsgContent}}</div>
+				<div class="show-content">{{showDetail.MsgContent}}</div>
 				<detail-img v-on:imgs="getImgs(showDetail)">
 					
 				</detail-img>
+				<div class="mui-pull-right extra-container">
+					<span class="iconfont icon-support"></span>
+					<span class="iconfont icon-liaotian1"></span>
+				</div>
 			</div>
-			<comment-list v-on:comments="showDetail.Comments">
-				<comment-reply>
-				</comment-reply>
-			</comment-list>
+			<div class="comments-container" v-if="showDetail.Comments.length>0">
+				<div class="comments-banner"> <div class=" banner-left"></div><div class="comments-no">评论({{showDetail.TotalCnt}})</div></div>
+				<div class="comments-li" v-for="comment of showDetail.Comments">
+					<div class="comment-person"><img class="comment-img" v-bind:src="comment.UserImg"  /><div class="comment-name">{{comment.UserName}}</div></div>
+					<p class="comment-content">{{comment.CommentContent}}</p>
+					<div class="comment-bottom">
+						<p class="comment-repliesNo">回复 {{comment.Replys.length}}</p>
+						<p class="comment-date">{{comment.CommentDate}}</p>
+					</div>
+					<div  class="replies-container" v-if="comment.Replys.length>0">
+						<div class="reply-li" v-for="reply of comment.Replys">
+							<p class="reply-content"><span class="reply-name">{{reply.UserName}}</span>
+								<template v-if="reply.ReplyName">
+									@<span class="reply-name">{{reply.ReplyName}}</span>
+								</template>
+								:{{reply.CommentContent}}</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/vue.js"></script>
@@ -140,10 +162,10 @@
 							var replies = comments[i].Replys;
 							for(var j in replies) {
 								if(replies[j].UserId) {
-									ids.push(comments[i].UserId);
+									ids.push(replies[j].UserId);
 								}
 								if(replies[j].ReplyId) {
-									ids.push(comments[i].ReplyId);
+									ids.push(replies[j].ReplyId);
 								}
 							}
 						}
