--- a/JiaoBaoYun-hb/html/show/show-detail.html
+++ b/JiaoBaoYun-hb/html/show/show-detail.html
@@ -23,30 +23,30 @@
 					<img class="publisher-img" v-bind:src="showDetail.PublisherImg"/>
 					<div class="publisher-info">
 						<div class="publisher-name single-line">{{showDetail.PublisherName}}</div>
-						<div class="publisher-date">{{showDetail.PublishDate}}</div>
+						<div class="publisher-date">{{getSimpleDate(showDetail.PublishDate)}}</div>
 					</div>
-					<button class="attention-btn btn-unfocus">关注</button>
+					<button class="attention-btn btn-unfocus" v-bind:class="{'btn-focused':showDetail.IsFocused}" v-on:tap="toggleFocus">{{showDetail.IsFocused?'已关注':'关注'}}</button>
 				</div>
 				<div class="show-content">{{showDetail.MsgContent}}</div>
 				<detail-img v-on:imgs="getImgs(showDetail)">
 					
 				</detail-img>
 				<div class="mui-pull-right extra-container">
-					<span class="iconfont icon-support"></span>
+					<span class="iconfont icon-support" v-bind:class="{isLiked:showDetail.IsLike,isUnlike:!showDetail.IsLike}" v-on:tap="toggleLike"></span>
 					<span class="iconfont icon-liaotian1"></span>
 				</div>
 			</div>
 			<div class="comments-container" v-if="showDetail.Comments.length>0">
 				<div class="comments-banner"> <div class=" banner-left"></div><div class="comments-no">评论({{showDetail.TotalCnt}})</div></div>
-				<div class="comments-li" v-for="comment of showDetail.Comments">
+				<div class="comments-li" v-for="(comment,index0) of showDetail.Comments" v-on:longtap="showSheet(comment,index0)">
 					<div class="comment-person"><img class="comment-img" v-bind:src="comment.UserImg"  /><div class="comment-name">{{comment.UserName}}</div></div>
 					<p class="comment-content">{{comment.CommentContent}}</p>
 					<div class="comment-bottom">
 						<p class="comment-repliesNo">回复 {{comment.Replys.length}}</p>
-						<p class="comment-date">{{comment.CommentDate}}</p>
+						<p class="comment-date">{{getSimpleDate(comment.CommentDate)}}</p>
 					</div>
 					<div  class="replies-container" v-if="comment.Replys.length>0">
-						<div class="reply-li" v-for="reply of comment.Replys">
+						<div class="reply-li" v-for="(reply,index1) of comment.Replys" v-on:longtap="showSheet(comment,index0,index1)">
 							<p class="reply-content"><span class="reply-name">{{reply.UserName}}</span>
 								<template v-if="reply.ReplyName">
 									@<span class="reply-name">{{reply.ReplyName}}</span>
@@ -58,15 +58,21 @@
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
-		<script src="../../js/utils/vue.js"></script>
 		<script src="../../js/utils/events.js"></script>
+		<script src="../../js/utils/vue.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
 		<script src="../../js/show/show-comment.js"></script>
 		<script type="text/javascript">
 			var pageIndex = 1;
 			var tableId = 0;
 			mui.init({
-
+				gestureConfig:{
+					longtap:true
+				},
+				beforeback:function(){
+//					commentList.resetData();
+					return true;
+				}
 			})
 			mui.plusReady(function() {
 				mui.fire(plus.webview.currentWebview().opener(), 'detailReady', true);
@@ -74,7 +80,7 @@
 					console.log("获取的数据:" + JSON.stringify(e.detail.data));
 					var showInfo = e.detail.data;
 					tableId = showInfo.TabId;
-					requestShowDetail()
+					requestShowDetail();
 				})
 			})
 			/**
@@ -142,7 +148,7 @@
 			}
 
 			function getName(info) {
-				return info.bunick ? inof.bunick : info.unick;
+				return info.bunick ? info.bunick : info.unick;
 			}
 
 			function getIds(data) {
