--- a/JiaoBaoYun-hb/html/show/show-detail.html
+++ b/JiaoBaoYun-hb/html/show/show-detail.html
@@ -16,11 +16,11 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">详情</h1>
 		</header>
-		<div id="show-detail"  class="mui-content">
-			<div >
+		<div id="show-detail" class="mui-content">
+			<div>
 				<h4 class="detail-head single-line">{{showDetail.MsgTitle}}</h4>
 				<div class="publisher-container">
-					<img class="publisher-img" v-bind:src="showDetail.PublisherImg"/>
+					<img class="publisher-img" v-bind:src="showDetail.PublisherImg" />
 					<div class="publisher-info">
 						<div class="publisher-name single-line">{{showDetail.PublisherName}}</div>
 						<div class="publisher-date">{{getSimpleDate(showDetail.PublishDate)}}</div>
@@ -29,7 +29,7 @@
 				</div>
 				<div class="show-content">{{showDetail.MsgContent}}</div>
 				<detail-img v-on:imgs="getImgs(showDetail)">
-					
+
 				</detail-img>
 				<div class="mui-pull-right extra-container">
 					<span class="iconfont icon-support" v-bind:class="{isLiked:showDetail.IsLike,isUnlike:!showDetail.IsLike}" v-on:tap="toggleLike"></span>
@@ -37,15 +37,20 @@
 				</div>
 			</div>
 			<div class="comments-container" v-if="showDetail.Comments.length>0">
-				<div class="comments-banner"> <div class=" banner-left"></div><div class="comments-no">评论({{showDetail.TotalCnt}})</div></div>
+				<div class="comments-banner">
+					<div class=" banner-left"></div>
+					<div class="comments-no">评论({{showDetail.TotalCnt}})</div>
+				</div>
 				<div class="comments-li" v-for="(comment,index0) of showDetail.Comments" v-on:longtap="showSheet(comment,index0)">
-					<div class="comment-person"><img class="comment-img" v-bind:src="comment.UserImg"  /><div class="comment-name">{{comment.UserName}}</div></div>
+					<div class="comment-person"><img class="comment-img" v-bind:src="comment.UserImg" />
+						<div class="comment-name">{{comment.UserName}}</div>
+					</div>
 					<p class="comment-content">{{comment.CommentContent}}</p>
 					<div class="comment-bottom">
 						<p class="comment-repliesNo">回复 {{comment.Replys.length}}</p>
 						<p class="comment-date">{{getSimpleDate(comment.CommentDate)}}</p>
 					</div>
-					<div  class="replies-container" v-if="comment.Replys.length>0">
+					<div class="replies-container" v-if="comment.Replys.length>0">
 						<div class="reply-li" v-for="(reply,index1) of comment.Replys" v-on:longtap="showSheet(comment,index0,index1)">
 							<p class="reply-content"><span class="reply-name">{{reply.UserName}}</span>
 								<template v-if="reply.ReplyName">
@@ -66,11 +71,11 @@
 			var pageIndex = 1;
 			var tableId = 0;
 			mui.init({
-				gestureConfig:{
-					longtap:true
+				gestureConfig: {
+					longtap: true
 				},
-				beforeback:function(){
-//					commentList.resetData();
+				beforeback: function() {
+					//					commentList.resetData();
 					return true;
 				}
 			})
@@ -107,8 +112,16 @@
 			function rechargeData(showDetail, personInfoes) {
 				for(var i in personInfoes) {
 					if(showDetail.PublisherId == personInfoes[i].utid) {
-						showDetail.PublisherName=getName(personInfoes[i]);
-						showDetail.PublisherImg=updateHeadImg(personInfoes[i].uimg,2);
+						showDetail.PublisherName = getName(personInfoes[i]);
+						showDetail.PublisherImg = updateHeadImg(personInfoes[i].uimg, 2);
+					}
+					if(showDetail.LikeUsers.length > 0) {
+						var likers = showDetail.LikeUsers;
+						for(var n in likers) {
+							if(likers[n].userId == personInfoes[i].utid) {
+								likers[n].userName = getName(personInfoes[i]);
+							}
+						}
 					}
 					if(showDetail.Comments.length > 0) {
 						var comments = showDetail.Comments;
@@ -116,13 +129,13 @@
 							if(comments[j].UserId) {
 								if(comments[j].UserId == personInfoes[i].utid) {
 									comments[j].UserName = getName(personInfoes[i]);
-									comments[j].UserImg=updateHeadImg(personInfoes[i].uimg,2)
+									comments[j].UserImg = updateHeadImg(personInfoes[i].uimg, 2)
 								}
 							}
 							if(comments[j].ReplyId) {
 								if(comments[j].ReplyId == personInfoes[i].utid) {
 									comments[j].ReplyName = getName(personInfoes[i]);
-									comments[j].ReplyImg=updateHeadImg(personInfoes[i].uimg,2)
+									comments[j].ReplyImg = updateHeadImg(personInfoes[i].uimg, 2)
 								}
 							}
 							if(comments[j].Replys.length > 0) {
@@ -143,8 +156,8 @@
 						}
 					}
 				}
-				console.log("获取人员信息后的展现详情："+JSON.stringify(showDetail));
-				commentList.showDetail=showDetail;
+				console.log("获取人员信息后的展现详情：" + JSON.stringify(showDetail));
+				commentList.showDetail = showDetail;
 			}
 
 			function getName(info) {
@@ -155,6 +168,11 @@
 				console.log("要处理的数据：" + JSON.stringify(data))
 				var ids = [];
 				ids.push(data.PublisherId);
+				if(data.LikeUsers.length > 0) {
+					for(var n in data.LikeUsers) {
+						ids.push(data.LikeUsers[n].userId);
+					}
+				}
 				if(data.Comments.length > 0) {
 					var comments = data.Comments;
 					for(var i in comments) {
