选择云存储文件夹时没有文件夹去掉提示，修改下载失败后的提示，调整微课视频播放区域和列表中的缩略图大小

--- a/JiaoBaoYun-hb/html/cloud/storage_transport.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_transport.html
@@ -852,7 +852,7 @@
 			function downloadFail() {
 				var waiting = document.getElementById("down_waiting_" + downloadingId);
 				if(waiting) {
-					waiting.innerText = '上传失败';
+					waiting.innerText = '下载失败';
 					document.getElementById("down_btn_" + downloadingId).style.display = "none";
 				}
 				downloadList.value[downloadingId].state = -2;
