--- a/JiaoBaoYun-hb/html/micro-course/course_section.html
+++ b/JiaoBaoYun-hb/html/micro-course/course_section.html
@@ -354,6 +354,12 @@
 				z-index: 2;
 				width: 100%;
 				background-color: black;
+				background-position: 0% 50%;
+				background-repeat: no-repeat;
+				-webkit-background-size: 100%;
+				-moz-background-size: 100%;
+				-o-background-size: 100%;
+				background-size: 100%;
 			}
 
 			.audio-area {
@@ -524,7 +530,7 @@
 
 				//初始化视频播放区域
 				var video = document.getElementById("video");
-				video.style.height = plus.screen.resolutionWidth * 162 / 260 + "px";
+				video.style.height = plus.screen.resolutionWidth * 190 / 360 + "px";
 				video.onplaying = function() {
 					console.log("video-onplaying");
 					video.style.backgroundImage = "";
@@ -1039,7 +1045,7 @@
 				video.style.backgroundImage = "";
 				var collapse_content_show = document.getElementById("collapse_content_show");
 				if(type == 1) { //视频
-					document.getElementById("scroll_wrapper").style.top = 44 + parseInt(plus.screen.resolutionWidth * 162 / 260) + "px";
+					document.getElementById("scroll_wrapper").style.top = 44 + parseInt(plus.screen.resolutionWidth * 190 / 360) + "px";
 					document.getElementById("video_area").style.display = "inline";
 					document.getElementById("audio_area").style.display = "none";
 					show = false;
