展现详情增加部分功能

--- a/JiaoBaoYun-hb/html/show/detail-comment.html
+++ b/JiaoBaoYun-hb/html/show/detail-comment.html
@@ -29,7 +29,7 @@
 			/**
 			 * 设置监听
 			 */
-			function setListner(){
+			function setListener(){
 				events.addTap('publish',function(){
 					publishComment();
 				})
