--- a/JiaoBaoYun-hb/html/show/show-detail.html
+++ b/JiaoBaoYun-hb/html/show/show-detail.html
@@ -16,24 +16,38 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">详情</h1>
 		</header>
-		<div id="show-detail" class="mui-content">
+		<div id="show-detail" v-if="showDetail.TabId" class="mui-content">
 			<div>
 				<h4 class="detail-head single-line">{{showDetail.MsgTitle}}</h4>
 				<div class="publisher-container">
-					<img class="publisher-img" v-bind:src="showDetail.PublisherImg" />
+					<img class="publisher-img" v-bind:src="showDetail.PublisherImg" v-on:tap="openPersonSpace(showDetail.PublisherId)"/>
 					<div class="publisher-info">
 						<div class="publisher-name single-line">{{showDetail.PublisherName}}</div>
-						<div class="publisher-date">{{getSimpleDate(showDetail.PublishDate)}}</div>
+						<div class="publisher-date">
+							{{getSimpleDate(showDetail.PublishDate)}}
+						</div>
 					</div>
 					<button class="attention-btn btn-unfocus" v-bind:class="{'btn-focused':showDetail.IsFocused}" v-on:tap="toggleFocus">{{showDetail.IsFocused?'已关注':'关注'}}</button>
 				</div>
 				<div class="show-content">{{showDetail.MsgContent}}</div>
-				<detail-img v-on:imgs="getImgs(showDetail)">
+				<div v-for="img of getImgs(showDetail)">
+					
+				</div>
+				<!--<detail-img v-on:imgs="getImgs(showDetail)">
 
-				</detail-img>
+				</detail-img>-->
 				<div class="mui-pull-right extra-container">
 					<span class="iconfont icon-support" v-bind:class="{isLiked:showDetail.IsLike,isUnlike:!showDetail.IsLike}" v-on:tap="toggleLike"></span>
-					<span class="iconfont icon-liaotian1"></span>
+					<span class="iconfont icon-liaotian1" v-on:click="openComment"></span>
+				</div>
+				<div v-if="showDetail.LikeUsers&&showDetail.LikeUsers.length>0" style="width: 100%;">
+					<hr style="width: 100%;" />
+					<p v-on:tap="openLikers">
+						<span class="liker-name" v-for="(liker,likerIndex) of showDetail.LikeUsers" v-if="likerIndex<20" v-on:tap.stop="openPersonSpace(liker.userId)">{{liker.userName}}
+							<span v-if="likerIndex<showDetail.LikeUsers.length-1&&likerIndex<19">,</span>
+						</span>
+						<span v-if="showDetail.LikeUsers.length>20">等人觉得很赞</span
+					</p>
 				</div>
 			</div>
 			<div class="comments-container" v-if="showDetail.Comments.length>0">
@@ -41,26 +55,28 @@
 					<div class=" banner-left"></div>
 					<div class="comments-no">评论({{showDetail.TotalCnt}})</div>
 				</div>
-				<div class="comments-li" v-for="(comment,index0) of showDetail.Comments" v-on:longtap="showSheet(comment,index0)">
-					<div class="comment-person"><img class="comment-img" v-bind:src="comment.UserImg" />
+				<div class="comments-li mui-table-view-cell" v-for="(comment,index0) of showDetail.Comments" v-on:tap="openComment" v-on:longtap="showSheet(comment,index0)">
+					<div class="comment-person"><img class="comment-img" v-bind:src="comment.UserImg" v-on:tap.stop="openPersonSpace(comment.UserId)" />
 						<div class="comment-name">{{comment.UserName}}</div>
 					</div>
 					<p class="comment-content">{{comment.CommentContent}}</p>
 					<div class="comment-bottom">
-						<p class="comment-repliesNo">回复 {{comment.Replys.length}}</p>
+						<p class="comment-repliesNo">回复 
+							{{comment.Replys.length}}
+						</p>
 						<p class="comment-date">{{getSimpleDate(comment.CommentDate)}}</p>
 					</div>
 					<div class="replies-container" v-if="comment.Replys.length>0">
 						<div class="reply-li" v-for="(reply,index1) of comment.Replys" v-on:longtap="showSheet(comment,index0,index1)">
 							<p class="reply-content"><span class="reply-name">{{reply.UserName}}</span>
-								<template v-if="reply.ReplyName">
-									@<span class="reply-name">{{reply.ReplyName}}</span>
-								</template>
-								:{{reply.CommentContent}}</p>
-						</div>
-					</div>
+						<template v-if="reply.ReplyName">
+							@<span class="reply-name">{{reply.ReplyName}}</span>
+						</template>
+						:{{reply.CommentContent}}</p>
 				</div>
 			</div>
+		</div>
+		</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
@@ -80,6 +96,7 @@
 				}
 			})
 			mui.plusReady(function() {
+				events.preload('../quan/classSpace-persons.html',50);
 				mui.fire(plus.webview.currentWebview().opener(), 'detailReady', true);
 				window.addEventListener('showDetail', function(e) {
 					console.log("获取的数据:" + JSON.stringify(e.detail.data));
