--- a/JiaoBaoYun-hb/html/show/show-home1.html
+++ b/JiaoBaoYun-hb/html/show/show-home1.html
@@ -74,7 +74,7 @@
 			var deceleration = mui.os.ios ? 0.003 : 0.0009;
 			//plusReay事件监听
 			mui.plusReady(function() {
-//				events.preload('show-detail.html',100);
+				events.preload('show-detail.html',100);
 				window.addEventListener('detailReady',function(e){
 					detailReady=e.detail;
 				})
