修改人员资料，群管理，删除时的弹框样式

--- a/JiaoBaoYun-hb/html/mine/qun_manage_a.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_a.html
@@ -339,7 +339,7 @@
 									wd.close();
 								});
 							}
-						});
+						},"div");
 					}
 				});
 
@@ -477,7 +477,7 @@
 								});
 							}
 						}
-					});
+					},"div");
 				});
 
 				//创建资料
